--- a/views/layout.erb
+++ b/views/layout.erb
@@ -11,9 +11,23 @@
     <meta name="author" content="">
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
-    <link href="/css/main.css" rel='stylesheet'> 
+    <!-- Le styles -->
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <style type="text/css">
+      body {
+        padding-top: 60px;
+        padding-bottom: 40px;
+      }
+    </style>
+    <link href="/css/bootstrap-responsive.min.css" rel="stylesheet">
+
+    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <link href="/css/application.css" rel="stylesheet" />
     
-    <title>Sinatra Template</title> 
+    <title>Bible Community Church</title> 
   </head> 
 
   <body> 
@@ -21,7 +35,23 @@
     <div id='container'>
       <%= yield %>
     </div>
-    
+    <!-- Le javascript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <%# <script src="/js/bootstrap-transition.js"></script>%>
+    <%# <script src="/js/bootstrap-alert.js"></script>%>
+    <%# <script src="/js/bootstrap-modal.js"></script>%>
+    <%# <script src="/js/bootstrap-dropdown.js"></script>%>
+    <%# <script src="/js/bootstrap-scrollspy.js"></script>%>
+    <%# <script src="/js/bootstrap-tab.js"></script>%>
+    <%# <script src="/js/bootstrap-tooltip.js"></script>%>
+    <%# <script src="/js/bootstrap-popover.js"></script>%>
+    <%# <script src="/js/bootstrap-button.js"></script>%>
+    <%# <script src="/js/bootstrap-collapse.js"></script>%>
+    <%# <script src="/js/bootstrap-carousel.js"></script>%>
+    <%# <script src="/js/bootstrap-typeahead.js"></script>    %>
   </body> 
 </html> 
 
