starting to work on posting

--- a/assets/application.sass
+++ b/assets/application.sass
@@ -18,3 +18,11 @@ body
       height: 23px
       border: #AAA solid 1px
 
+#new-post
+  margin: 10px 20px
+  text-align: center
+  textarea
+    width: 99%
+  button
+    width: 100%
+
