--- a/assets/application.sass
+++ b/assets/application.sass
@@ -14,6 +14,7 @@ body
       font-size: 1.1em
       top: 3px
       position: relative
+      margin-right: 5px
     img
       height: 23px
       border: #AAA solid 1px
