--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,8 +1,13 @@
+* {
+  box-sizing: border-box; }
+
 body {
-  padding-top: 40px; }
+  padding-top: 50px; }
 
 #header {
-  color: #444444; }
+  color: #444444;
+  position: fixed;
+  box-shadow: 0px 1px 3px 3px #cccccc; }
   #header h2 {
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
     float: left; }
@@ -13,15 +18,44 @@ body {
       text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
       font-size: 1.1em;
       top: 3px;
-      position: relative; }
+      position: relative;
+      margin-right: 5px; }
     #header .user-info img {
       height: 23px;
       border: #aaaaaa solid 1px; }
 
 #new-post {
-  margin: 10px 20px;
   text-align: center; }
   #new-post textarea {
     width: 99%; }
   #new-post button {
     width: 100%; }
+
+#posts span {
+  color: #666666; }
+#posts img {
+  height: 25px;
+  display: inline;
+  border: #cccccc solid 1px;
+  margin-right: 5px; }
+#posts p {
+  border-bottom: 1px solid rgba(200, 200, 200, 0.4);
+  -webkit-box-shadow: inset 0 2px 3px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: inset 0 2px 3px rgba(0, 0, 0, 0.1);
+  box-shadow: inset 0 2px 3px rgba(0, 0, 0, 0.1);
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  font-size: 1.2em;
+  margin: 10px 25px;
+  padding: 20px;
+  color: #666666; }
+#posts .timestamp {
+  float: right;
+  font-size: 0.7em; }
+#posts hr {
+  display: block;
+  clear: both;
+  height: 0;
+  border-top: 1px solid #cccccc;
+  border-bottom: 1px solid #dddddd; }
