--- a/assets/application.sass
+++ b/assets/application.sass
@@ -3,11 +3,17 @@
 
 body
   padding-top: 50px
+  background-color: rgb(127,205,244)
+  background-image: url(/img/background.jpg)
+  background-attachment: fixed
+  background-position-y: bottom
+  background-repeat: no-repeat
+  padding-bottom: 50px
 
 #header
   color: #444
   position: fixed
-  box-shadow: 0px 1px 3px 3px #CCC
+  box-shadow: 0px 1px 5px 5px rgba(0,0,0,0.5)
 
   h2
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25)
@@ -41,6 +47,7 @@ body
     border: #CCC solid 1px
     margin-right: 5px
   p
+    background: #FFF
     border-bottom: 1px solid rgba(200, 200, 200, 0.4)
     -webkit-box-shadow: inset 0 2px 3px rgba(0, 0, 0, 0.1)
     -moz-box-shadow: inset 0 2px 3px rgba(0, 0, 0, 0.1)
