--- a/public/css/application.css
+++ b/public/css/application.css
@@ -2,12 +2,18 @@
   box-sizing: border-box; }
 
 body {
-  padding-top: 50px; }
+  padding-top: 50px;
+  background-color: #7fcdf4;
+  background-image: url(/img/background.jpg);
+  background-attachment: fixed;
+  background-position-y: bottom;
+  background-repeat: no-repeat;
+  padding-bottom: 50px; }
 
 #header {
   color: #444444;
   position: fixed;
-  box-shadow: 0px 1px 3px 3px #cccccc; }
+  box-shadow: 0px 1px 5px 5px rgba(0, 0, 0, 0.5); }
   #header h2 {
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
     float: left; }
@@ -39,6 +45,7 @@ body {
   border: #cccccc solid 1px;
   margin-right: 5px; }
 #posts p {
+  background: white;
   border-bottom: 1px solid rgba(200, 200, 200, 0.4);
   -webkit-box-shadow: inset 0 2px 3px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: inset 0 2px 3px rgba(0, 0, 0, 0.1);
