--- a/assets/application.sass
+++ b/assets/application.sass
@@ -46,7 +46,9 @@ body
     display: inline
     border: #CCC solid 1px
     margin-right: 5px
-  p
+  pre
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif
+    word-break: normal
     background: #FFF
     border-bottom: 1px solid rgba(200, 200, 200, 0.4)
     -webkit-box-shadow: inset 0 2px 3px rgba(0, 0, 0, 0.1)
