--- a/public/css/application.css
+++ b/public/css/application.css
@@ -44,7 +44,9 @@ body {
   display: inline;
   border: #cccccc solid 1px;
   margin-right: 5px; }
-#posts p {
+#posts pre {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  word-break: normal;
   background: white;
   border-bottom: 1px solid rgba(200, 200, 200, 0.4);
   -webkit-box-shadow: inset 0 2px 3px rgba(0, 0, 0, 0.1);
