--- a/assets/application.sass
+++ b/assets/application.sass
@@ -2,7 +2,7 @@
   box-sizing: border-box
 
 body
-  padding-top: 50px
+  padding-top: 60px
   background-color: rgb(127,205,244)
   background-image: url(/img/background.jpg)
   background-attachment: fixed
@@ -18,6 +18,8 @@ body
   h2
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25)
     float: left
+    overflow-y: hidden
+    height: 36px
   .user-info
     float: right
     margin-top: 5px
@@ -34,6 +36,7 @@ body
 #new-post
   text-align: center
   textarea
+    height: 100px
     width: 99%
   button
     width: 100%
